--- a/client/public/index.html
+++ b/client/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>File Sharing App</title>
+    <title>ShareIt</title>
     <link rel="icon" href="file-sharing.ico" type="image/icon"/>
   </head>
   <body>
